# squale

./: Cargo.toml  README.md
src/: args.rs  main.rs  output_format.rs  rect.rs  scaler.rs
