[package]
name = "squale"
version = "0.1.0"
edition = "2021"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/downscale"
description = "a tiny image downscaler"
keywords = ["image", "resize", "downscale"]
license = "MIT"
categories = ["command-line-utilities"]
readme = "README.md"
rust-version = "1.67"
exclude = ["website", "downscale*.zip"]

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.8", features = ["derive"] }
lazy-regex = "2.4"
image = "0.24"
